--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -8,6 +8,15 @@
   }
 }
 
+@layer utilities {
+  .animation-delay-2000 {
+    animation-delay: 2s;
+  }
+  .animation-delay-4000 {
+    animation-delay: 4s;
+  }
+}
+
 .social-svg {
   border-radius: 8px !important;
 }
